--- a/smeuth/smeuth.html
+++ b/smeuth/smeuth.html
@@ -48,7 +48,7 @@
   function printout(a) {
     var r = document.getElementById('result')
     // Placeholder until we get the python backend running properly
-    r.innerHTML = 'This user would have this many matches: ' + a + '<br>' + 'Unfortunately this is not enough people to generate a meetup.'
+    r.innerHTML = 'You would have this many matches: ' + a + '<br><br>' + 'Unfortunately this is not enough people to generate a meetup.'
   }
   </script>
 
